Stopped styles bleeding into other widgets

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-table {
+#taskwarrior-widget-container table {
     border-collapse: collapse;
 }
 
-tr.header {
+#taskwarrior-widget-container tr.header {
     font-size: 8pt;
     font-weight: bold;
 }
 
-th, td {
+#taskwarrior-widget-container th, td {
     padding-bottom: 4px;
     padding-left: 0px;
     padding-right: 12px;
@@ -15,21 +15,21 @@ th, td {
     text-align: left;
 }
 
-th:last-of-type, td:last-of-type {
+#taskwarrior-widget-container th:last-of-type, td:last-of-type {
     padding-right: 8px;
 }
 
-th.num, td.num {
+#taskwarrior-widget-container th.num, td.num {
     text-align: right;
 }
 
-.star {
+#taskwarrior-widget-container .star {
     font-size: 8pt;
     padding-left: 4px;
     padding-right: 1px;
     text-align: center;
 }
 
-tbody tr:nth-child(odd) {
+#taskwarrior-widget-container tbody tr:nth-child(odd) {
     background-color: rgba(255, 255, 255, 0.1);
 }
